# pico-ql

./: README.md
LED_project_A/: CMakeLists.txt  LED_project_A.cpp
audioinout/: .gitignore  CMakeLists.txt  audioinout.cpp
audioinout/audio_i2s/: CMakeLists.txt  audio_i2s.pio  audio_i2s_handler.c
audioinout/audio_i2s/include/: audio_i2s_handler.h
